--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "outDir": "lib",
     "rootDir": "src",
     "strict": true,
-    "target": "es2017",
+    "target": "es2020",
+    "lib": ["esnext.array", "ES2020.Promise"],
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -14,5 +15,7 @@
   },
   "include": [
     "src/**/*"
-  ]
+  ],
+  "exclude": ["dist", "tests"]
+
 }
