--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "tslib": "^1",
     "typescript": "^4.3.5",
     "@autocloud/eslint-config": "^0.1.0",
+    "@cloudgraph/sdk": "^0.5.0",
     "@semantic-release/changelog": "^6.0.0",
     "@semantic-release/git": "^10.0.0",
     "@semantic-release/gitlab": "^7.0.3",
