--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   },
   "devDependencies": {
     "@autocloud/eslint-config": "^0.1.0",
-    "@cloudgraph/sdk": "^0.5.0",
     "@semantic-release/changelog": "^6.0.0",
     "@semantic-release/git": "^10.0.0",
     "@semantic-release/gitlab": "^7.0.3",
     "@semantic-release/npm": "^8.0.0",
+    "@types/jest": "^26.0.24",
     "@types/node": "^15.12.4",
     "@types/pino": "^6.3.11",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
@@ -33,10 +33,12 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^7.0.0",
+    "jest": "^27.0.6",
     "lint-staged": "^11.1.1",
     "prettier": "^2.3.2",
     "semantic-release": "^17.4.4",
-    "shx": "^0.3.3"
+    "shx": "^0.3.3",
+    "ts-jest": "^27.0.4"
   },
   "engines": {
     "node": ">=14.0.0"
@@ -52,7 +54,8 @@
     "prepare": "npx husky install && shx rm -rf .git/hooks && shx ln -s ../.husky .git/hooks",
     "prepublish": "rm -rf lib && tsc",
     "lint": "eslint --config .eslintrc.json --ext .js,.ts ./",
-    "lint:fix": "eslint --fix --config .eslintrc.json --ext .js,.ts ./"
+    "lint:fix": "eslint --fix --config .eslintrc.json --ext .js,.ts ./",
+    "test": "NODE_ENV=test jest"
   },
   "husky": {
     "hooks": {
