--- a/package.json
+++ b/package.json
@@ -12,11 +12,9 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "bugs": "https://github.com/cloudgraphdev/policy-pack-aws-cis-1.2.0/issues",
-  "dependencies": {
-    "tslib": "^1",
-    "typescript": "^4.3.5"
-  },
   "devDependencies": {
+    "tslib": "^1",
+    "typescript": "^4.3.5",
     "@autocloud/eslint-config": "^0.1.0",
     "@semantic-release/changelog": "^6.0.0",
     "@semantic-release/git": "^10.0.0",
