--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,13 +49,13 @@ build:
   script:
     - yarn prepack
 
-# test:
-#   image: node:16-alpine
-#   stage: test
-#   rules:
-#     - when: always
-#   script:
-#     - yarn test
+test:
+  image: node:16-alpine
+  stage: test
+  rules:
+    - when: always
+  script:
+    - yarn test
 
 semantic release:
   image: node:16-alpine
@@ -66,10 +66,10 @@ semantic release:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   variables:
     # Set git commit identity
-    GIT_AUTHOR_NAME: "AutoCloud Deploy Bot"
-    GIT_AUTHOR_EMAIL: "no-reply@loudcloud.dev"
-    GIT_COMMITTER_NAME: "AutoCloud Deploy Bot"
-    GIT_COMMITTER_EMAIL: "no-reply@loudcloud.dev"
+    GIT_AUTHOR_NAME: 'AutoCloud Deploy Bot'
+    GIT_AUTHOR_EMAIL: 'no-reply@loudcloud.dev'
+    GIT_COMMITTER_NAME: 'AutoCloud Deploy Bot'
+    GIT_COMMITTER_EMAIL: 'no-reply@loudcloud.dev'
     # Disable Husky for the git step of semantic release (handles all versions, env var name changed in v6)
     HUSKY_SKIP_HOOKS: 1
     HUSKY: 0
