--- a/src/aws/cis-1.3.0/tsconfig.json
+++ b/src/aws/cis-1.3.0/tsconfig.json
@@ -3,7 +3,7 @@
     "declaration": true,
     "importHelpers": true,
     "module": "commonjs",
-    "outDir": "lib",
+    "outDir": "dist",
     "rootDir": "./",
     "strict": true,
     "target": "es2020",
