chore: change publish command

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "scripts": {
     "lerna:init": "lerna init",
-    "lerna:publish": "lerna publish --registry https://gitlab.com/api/v4/projects/30427310/packages/npm/ --legacy-auth QV7iNeFwXm6s9Efxar3f",
+    "lerna:publish": "lerna publish from-git --registry https://gitlab.com/api/v4/projects/30427310/packages/npm/ --legacy-auth QV7iNeFwXm6s9Efxar3f",
     "lerna:test": "lerna run test --parallel",
     "lerna:version": "lerna version"
   },
