--- a/src/aws/cis-1.3.0/package.json
+++ b/src/aws/cis-1.3.0/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cloudgraph/policy-pack-aws-cis-1.3.0",
   "description": "Policy pack implementing CIS Amazon Web Services Foundations 1.3.0 Benchmark",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "author": "AutoCloud",
   "license": "MPL-2.0",
   "main": "dist/index.js",
@@ -9,11 +9,7 @@
   "bugs": "https://github.com/cloudgraphdev/policy-pack-aws-cis-1.2.0/issues",
   "devDependencies": {
     "@autocloud/eslint-config": "^0.1.0",
-    "@cloudgraph/sdk": "^0.5.4",
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/git": "^9.0.0",
-    "@semantic-release/gitlab": "^6.2.2",
-    "@semantic-release/npm": "^7.1.3",
+    "@cloudgraph/sdk": "^0.5.3",
     "@types/jest": "^27.0.3",
     "@types/node": "^15.12.4",
     "@types/pino": "^6.3.11",
@@ -26,11 +22,8 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.4.0",
-    "husky": "^7.0.0",
     "jest": "^27.0.6",
-    "lint-staged": "^11.1.1",
-    "prettier": "^2.3.2",
-    "semantic-release": "^17.4.4",
+    "prettier": "^2.4.1",
     "shx": "^0.3.3",
     "ts-jest": "^27.0.4",
     "tslib": "^1",
@@ -45,6 +38,7 @@
   ],
   "scripts": {
     "build": "yarn prepublish",
+    "lint": "eslint",
     "prepack": "rm -rf dist && tsc -b",
     "prepublish": "rm -rf dist && tsc",
     "publish": "yarn npm publish",
