--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,8 @@
 ---
 .configure-registry: &configure-registry
   - apk --quiet --no-progress --update --no-cache add git openssh
-  - |
-    {
-      echo "//registry.npmjs.com/:_authToken=${NPM_TOKEN}"
-      echo "@cloudgraph:registry=https://registry.npmjs.com/"
-    } | tee -a .npmrc
-  - |
-    {
-      echo "\"@cloudgraph:registry\" \"https://registry.npmjs.com/\""
-      echo "\"//registry.npmjs.com/:_authToken\" \"${NPM_TOKEN}\""
-    } | tee -a .yarnrc
-  - NODE_ENV=cicd yarn install --frozen-lockfile --cache-folder .npm --prefer-offline
+  - sed -i "s/%GITLAB_TOKEN%/$GITLAB_TOKEN/g" .yarnrc.yml
+  - NODE_ENV=cicd yarn install
 default:
   image: node:16-alpine
   before_script:
@@ -19,8 +10,8 @@ default:
   cache:
     key: ${CI_COMMIT_REF_SLUG}
     paths:
-      - .npm/
-      - lib/
+      - "**/dist/"
+    policy: pull-push
 
 workflow:
   rules:
@@ -30,24 +21,21 @@ variables:
   NPM_TOKEN: ${NPM_TOKEN}
 
 stages:
-  - build
   - test
+  - build
   - release
+  - pack
   - publish
   - notify
 
-build:
+lint:
   image: node:16-alpine
-  stage: build
+  stage: test
   rules:
     - if: $CI_COMMIT_TAG
-      when: never
-    - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $CI_COMMIT_MESSAGE =~ /^chore\(release\)/'
-      when: never
     - if: $CI_COMMIT_BRANCH
-      when: always
   script:
-    - yarn workspaces run prepack
+    - yarn workspaces foreach run lint
 
 test:
   image: node:16-alpine
@@ -55,15 +43,42 @@ test:
   rules:
     - when: always
   script:
-    - yarn workspaces run test
+    - yarn workspaces foreach run test
 
-semantic release:
+
+# build:
+#   image: node:16-alpine
+#   stage: build
+#   rules:
+#     - if: $CI_COMMIT_TAG
+#       when: never
+#     - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $CI_COMMIT_MESSAGE =~ /^chore\(release\)/'
+#       when: never
+#     - if: $CI_COMMIT_BRANCH
+#       when: always
+#   script:
+#     - yarn workspaces foreach run prepack
+
+# pack:
+#   image: node:16-alpine
+#   stage: pack
+#   rules:
+#     - when: always
+#   script:
+#     - find . -name "dist" -not -path "*.yarn*" -exec ls -1R {} \;
+
+release:
   image: node:16-alpine
   stage: release
   rules:
-    - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $CI_COMMIT_MESSAGE =~ /^chore\(release\)/'
+    - if: $CI_COMMIT_MESSAGE =~ /^chore\(release\)/
       when: never
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      when: always
+    - if: $CI_COMMIT_BRANCH == "alpha"
+      when: always
+    - if: $CI_COMMIT_BRANCH == "beta"
+      when: always
   variables:
     # Set git commit identity
     GIT_AUTHOR_NAME: 'AutoCloud Deploy Bot'
@@ -76,24 +91,38 @@ semantic release:
   before_script:
     - *configure-registry
   script:
-    - npx semantic-release -r $CI_PROJECT_URL
+    - yarn release
 
-.curlcmd: &curlcmd >
-  curl
-  -sS
-  -X POST
-  --data-urlencode "payload={\"attachments\":[{\"fallback\":\"$GITLAB_USER_NAME released new $CI_PROJECT_TITLE version $CI_COMMIT_TAG\",\"color\":\"good\",\"author_name\":\"$GITLAB_USER_NAME ($GITLAB_USER_LOGIN)\",\"author_icon\":\"$GITLAB_USER_AVATAR\",\"author_link\":\"https://gitlab.com/$GITLAB_USER_LOGIN\",\"title\":\"Version $CI_COMMIT_TAG of $CI_PROJECT_NAME released\",\"title_link\":\"$CI_PROJECT_URL/-/tags/$CI_COMMIT_TAG\",\"fields\":[{\"title\":\"Tag\",\"value\":\"<$CI_PROJECT_URL/commits/$CI_COMMIT_TAG|$CI_COMMIT_TAG>\",\"short\":true},{\"title\":\"Commit\",\"value\":\"<$CI_PROJECT_URL/tree/$CI_COMMIT_SHA|$CI_COMMIT_TITLE>\",\"short\":true}],\"footer\":\"$CI_PROJECT_NAME\",\"ts\":$( date +%s )}]}"
-  $SLACK_API_ENDPOINT
-
-notify:
-  image: alpine:latest
-  stage: notify
+publish:
+  image: node:16-alpine
+  stage: publish
   rules:
     - if: $CI_COMMIT_TAG
-  # Overwrite the default before script with a no-op action to disable the node specific actions
-  before_script:
-    - echo "noop"
+      when: always
+    - if: $CI_COMMIT_BRANCH
+      when: never
   script:
-    - apk add --no-cache curl
-    - GITLAB_USER_AVATAR=$( echo $GITLAB_USER_EMAIL | tr '[:upper:]' '[:lower:]' | tr -d '[:space:]' | md5sum | awk -F' ' '{print $1}' | xargs -I{} echo 'https://www.gravatar.com/avatar/{}?s=80&d=identicon' )
-    - *curlcmd
+    - echo $CI_COMMIT_TAG
+    - export NPM_TAG=`./.cicd/release_tag.js $CI_COMMIT_TAG`
+    - export WORKSPACE_NAME=`./.cicd/workspace_name.js $CI_COMMIT_TAG`
+    - yarn workspace $WORKSPACE_NAME publish --tag $NPM_TAG
+
+# .curlcmd: &curlcmd >
+#   curl
+#   -sS
+#   -X POST
+#   --data-urlencode "payload={\"attachments\":[{\"fallback\":\"$GITLAB_USER_NAME released new $CI_PROJECT_TITLE version $CI_COMMIT_TAG\",\"color\":\"good\",\"author_name\":\"$GITLAB_USER_NAME ($GITLAB_USER_LOGIN)\",\"author_icon\":\"$GITLAB_USER_AVATAR\",\"author_link\":\"https://gitlab.com/$GITLAB_USER_LOGIN\",\"title\":\"Version $CI_COMMIT_TAG of $CI_PROJECT_NAME released\",\"title_link\":\"$CI_PROJECT_URL/-/tags/$CI_COMMIT_TAG\",\"fields\":[{\"title\":\"Tag\",\"value\":\"<$CI_PROJECT_URL/commits/$CI_COMMIT_TAG|$CI_COMMIT_TAG>\",\"short\":true},{\"title\":\"Commit\",\"value\":\"<$CI_PROJECT_URL/tree/$CI_COMMIT_SHA|$CI_COMMIT_TITLE>\",\"short\":true}],\"footer\":\"$CI_PROJECT_NAME\",\"ts\":$( date +%s )}]}"
+#   $SLACK_API_ENDPOINT
+
+# notify:
+#   image: alpine:latest
+#   stage: notify
+#   rules:
+#     - if: $CI_COMMIT_TAG
+#   # Overwrite the default before script with a no-op action to disable the node specific actions
+#   before_script:
+#     - echo "noop"
+#   script:
+#     - apk add --no-cache curl
+#     - GITLAB_USER_AVATAR=$( echo $GITLAB_USER_EMAIL | tr '[:upper:]' '[:lower:]' | tr -d '[:space:]' | md5sum | awk -F' ' '{print $1}' | xargs -I{} echo 'https://www.gravatar.com/avatar/{}?s=80&d=identicon' )
+#     - *curlcmd
