--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,8 +30,10 @@ lint:
   image: node:16-alpine
   stage: test
   rules:
-    - if: $CI_COMMIT_TAG
+    - if: $CI_COMMIT_MESSAGE =~ /^chore\(release\)/
+      when: never
     - if: $CI_COMMIT_BRANCH
+      when: always
   script:
     - yarn workspaces foreach run lint
 
