--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,8 @@ lint:
 #   image: node:16-alpine
 #   stage: test
 #   rules:
+#     - if: $CI_COMMIT_MESSAGE =~ /^chore\(release\)/
+#       when: never
 #     - when: always
 #   script:
 #     - yarn workspaces foreach run test
