--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,21 @@
+#  Production settings to deploy to NPM instead of Gitlab
+#
+#  [1] Update this file to enable the NPM registry instead of the Gitlab registry
+#    - Remove the npmRegistries and npmScopes entries containing Gitlab hostnames that are currently uncommented
+#    - Uncomment the npmRegistries and npmScopes entries containing NPM hostnames that are currently commented
+#    - Remove this comment
+#  [2] Edit .gitlab-ci.yml as noted at the top of that file
+
+# npmRegistries:
+#   //registry.npmjs.com/:
+#     npmAlwaysAuth: true
+#     npmAuthToken: %NPM_TOKEN%
+
+# npmScopes:
+#   cloudgraph:
+#     npmPublishRegistry: "//registry.npmjs.com/"
+#     npmRegistryServer: "//registry.npmjs.com/"
+
 npmRegistries:
   //gitlab.com/api/v4/projects/30427310/packages/npm/:
     npmAlwaysAuth: true
