--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -19,7 +19,7 @@
 npmRegistries:
   //gitlab.com/api/v4/projects/30427310/packages/npm/:
     npmAlwaysAuth: true
-    npmAuthToken: %GITLAB_TOKEN%
+    npmAuthToken: $GITLAB_TOKEN
 
 npmScopes:
   cloudgraph:
