--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,6 +86,7 @@ publish:
   script:
     - export NPM_TAG=`./.cicd/release_tag.js $CI_COMMIT_TAG`
     - export WORKSPACE_NAME=`./.cicd/workspace_name.js $CI_COMMIT_TAG`
+    - cat .yarnrc.yml
     - yarn workspace $WORKSPACE_NAME publish --tag $NPM_TAG
 
 .curlcmd: &curlcmd >
