chore(pipeline): add Git repository URL

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,12 +1,9 @@
-npmRegistries:
-  //registry.npmjs.com/:
-    npmAlwaysAuth: true
-    npmAuthToken: $NPM_TOKEN
-
 npmScopes:
   cloudgraph:
     npmPublishRegistry: "https://registry.npmjs.com/"
     npmRegistryServer: "https://registry.npmjs.com/"
+    npmAlwaysAuth: true
+    npmAuthToken: "$NPM_TOKEN"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
