chore(pipeline): update Git repository URLs

--- a/src/aws/cis-1.2.0/.releaserc.yml
+++ b/src/aws/cis-1.2.0/.releaserc.yml
@@ -31,4 +31,8 @@ release:
    noCi: true
 success: false
 fail: false
+repository":
+  type: git
+  url: git@gitlab.com:auto-cloud/cloudgraph/policy-packs.git
+  directory: src/aws/cis-1.2.0
 tagFormat: "${version}"
