--- a/src/aws/cis-1.2.0/package.json
+++ b/src/aws/cis-1.2.0/package.json
@@ -6,7 +6,11 @@
   "license": "MPL-2.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "repository": "github:cloudgraphdev/cloudgraph-policy-packs",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cloudgraphdev/cloudgraph-policy-packs.git",
+    "directory": "src/aws/cis-1.2.0"
+  },
   "bugs": {
     "url": "https://github.com/cloudgraphdev/cloudgraph-policy-packs/issues"
   },
