chore(pipeline): fix semantic release Git repository reference

--- a/src/aws/cis-1.2.0/.releaserc.yml
+++ b/src/aws/cis-1.2.0/.releaserc.yml
@@ -31,7 +31,7 @@ release:
    noCi: true
 success: false
 fail: false
-repository":
+repository:
   type: git
   url: git@gitlab.com:auto-cloud/cloudgraph/policy-packs.git
   directory: src/aws/cis-1.2.0
