chore(pipeline): fix Semantic Release Git URL

--- a/src/aws/cis-1.2.0/.releaserc.yml
+++ b/src/aws/cis-1.2.0/.releaserc.yml
@@ -31,8 +31,5 @@ release:
    noCi: true
 success: false
 fail: false
-repository:
-  type: git
-  url: git@gitlab.com:auto-cloud/cloudgraph/policy-packs.git
-  directory: src/aws/cis-1.2.0
+repositoryUrl: https://gitlab.com/auto-cloud/cloudgraph/policy-packs.git
 tagFormat: "${version}"
