feat: Included cis 3.9 rule for gcp cis 1.2.0

--- a/src/gcp/cis-1.2.0/package.json
+++ b/src/gcp/cis-1.2.0/package.json
@@ -51,7 +51,8 @@
   ],
   "prettier": {
     "semi": false,
-    "singleQuote": true
+    "singleQuote": true,
+    "arrowParens": "avoid"
   },
   "scripts": {
     "build": "yarn prepublish",
