--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/gitlab": "^8.0.1",
-    "@semantic-release/npm": "^9.0.1",
+    "@semrel-extra/npm": "^1.2.0",
     "semantic-release": "^19.0.2"
   },
   "resolutions": {
