--- a/src/azure/cis-1.3.1/package.json
+++ b/src/azure/cis-1.3.1/package.json
@@ -8,7 +8,7 @@
   "types": "dist/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/cloudgraphdev/cloudgraph-policy-packs.git",
+    "url": "git+https://github.com/cloudgraphdev/cloudgraph-policy-packs.git",
     "directory": "src/azure/cis-1.3.1"
   },
   "bugs": {
@@ -43,7 +43,7 @@
     "typescript": "^4.3.5"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=16.0.0"
   },
   "homepage": "https://www.cloudgraph.dev/",
   "keywords": [
@@ -55,10 +55,10 @@
     "arrowParens": "avoid"
   },
   "scripts": {
-    "build": "yarn prepublish",
+    "build": "yarn prepack",
+    "clean": "rm -rf dist",
     "lint": "eslint",
-    "prepack": "rm -rf dist && tsc -b",
-    "prepublish": "rm -rf dist && tsc",
+    "prepack": "yarn clean && tsc -b",
     "publish": "yarn npm publish",
     "test": "NODE_ENV=test jest"
   }
