chore(build): remove test cruft

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,9 +1,9 @@
 npmScopes:
   cloudgraph:
+    npmAlwaysAuth: true
+    npmAuthToken: $NPM_TOKEN
     npmPublishRegistry: "https://registry.npmjs.com/"
     npmRegistryServer: "https://registry.npmjs.com/"
-    npmAlwaysAuth: true
-    npmAuthToken: "$NPM_TOKEN"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
