--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^8.0.1",
     "@semantic-release/npm": "^9.0.1",
-    "@semrel-extra/npm": "^1.2.0"
+    "@semrel-extra/npm": "^1.2.0",
+    "semantic-release": "^19.0.2"
   },
   "resolutions": {
     "chalk": "^4.1.2"
