--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@semantic-release/github": "^8.0.1",
     "@semantic-release/npm": "^9.0.1",
     "@semrel-extra/npm": "^1.2.0",
+    "npm": "^8.8.0",
     "semantic-release": "^19.0.2"
   },
   "resolutions": {
