chore: update multi semantic release command
- update authentication token
- disable install scripts

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "singleQuote": true
   },
   "scripts": {
-    "release": "NPM_CONFIG_IGNORE_SCRIPTS='true' NODE_JQ_SKIP_INSTALL_BINARY='true' multi-semantic-release",    
+    "release": "NODE_AUTH_TOKEN=$NPM_TOKEN NPM_CONFIG_IGNORE_SCRIPTS='true' NODE_JQ_SKIP_INSTALL_BINARY='true' multi-semantic-release --ignore-scripts",
     "clean": "yarn workspaces foreach -p run clean",
     "lint": "yarn workspaces foreach run lint",
     "lint:fix": "yarn workspaces foreach run lint:fix",
