--- a/src/aws/cis-1.3.0/package.json
+++ b/src/aws/cis-1.3.0/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cloudgraph/policy-pack-aws-cis-1.3.0",
   "description": "Policy pack implementing CIS Amazon Web Services Foundations 1.3.0 Benchmark",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "author": "AutoCloud",
   "license": "MPL-2.0",
   "main": "dist/index.js",
@@ -54,11 +54,10 @@
     "singleQuote": true
   },
   "scripts": {
-    "build": "yarn prepack",
+    "build": "pnpm prepack",
     "clean": "rm -rf dist",
     "lint": "eslint",
     "prepack": "rm -rf dist && tsc -b",
-    "publish": "yarn npm publish",
     "test": "NODE_ENV=test jest"
   }
 }
