--- a/src/azure/cis-1.3.1/package.json
+++ b/src/azure/cis-1.3.1/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cloudgraph/policy-pack-azure-cis-1.3.1",
   "description": "Policy pack implementing CIS Microsoft Azure Foundations 1.3.1 Benchmark",
-  "version": "1.13.2",
+  "version": "1.14.1",
   "author": "AutoCloud",
   "license": "MPL-2.0",
   "main": "dist/index.js",
@@ -55,11 +55,10 @@
     "arrowParens": "avoid"
   },
   "scripts": {
-    "build": "yarn prepack",
+    "build": "pnpm prepack",
     "clean": "rm -rf dist",
     "lint": "eslint",
     "prepack": "rm -rf dist && tsc -b",
-    "publish": "yarn npm publish",
     "test": "NODE_ENV=test jest"
   }
 }
