--- a/src/azure/pci-dss-3.2.1/package.json
+++ b/src/azure/pci-dss-3.2.1/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cloudgraph/policy-pack-azure-pci-dss-3.2.1",
   "description": "Policy pack implementing Payment Card Industry Data Security Standard version 3.2.1 Benchmark for Microsoft Azure Services",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "author": "AutoCloud",
   "license": "MPL-2.0",
   "main": "dist/index.js",
@@ -54,11 +54,10 @@
     "singleQuote": true
   },
   "scripts": {
-    "build": "yarn prepack",
+    "build": "pnpm prepack",
     "clean": "rm -rf dist",
     "lint": "eslint",
     "prepack": "rm -rf dist && tsc -b",
-    "publish": "yarn npm publish",
     "test": "NODE_ENV=test jest"
   }
 }
