--- a/src/gcp/nist-800-53-rev4/package.json
+++ b/src/gcp/nist-800-53-rev4/package.json
@@ -54,11 +54,10 @@
     "singleQuote": true
   },
   "scripts": {
-    "build": "yarn prepack",
+    "build": "pnpm prepack",
     "clean": "rm -rf dist",
     "lint": "eslint",
     "prepack": "rm -rf dist && tsc -b",
-    "publish": "yarn npm publish",
     "test": "NODE_ENV=test jest"
   }
 }
