chore(release): @cloudgraph/policy-pack-azure-cis-1.3.1 0.15.0
# [@cloudgraph/policy-pack-azure-cis-1.3.1-v1.15.0](https://github.com/cloudgraphdev/cloudgraph-policy-packs/compare/@cloudgraph/policy-pack-azure-cis-1.3.1@1.14.1...@cloudgraph/policy-pack-azure-cis-1.3.1@1.15.0) (2022-07-11)


### Bug Fixes

* add validation for null references ([ddd7f53](https://github.com/cloudgraphdev/cloudgraph-policy-packs/commit/ddd7f537b1843b14fee55690e61bbdd605386daf))
* fixed unit tests ([3f454f2](https://github.com/cloudgraphdev/cloudgraph-policy-packs/commit/3f454f220ea0d1b73721a343a52f06c30619508b))


### Features

* fixed and migrated rules from jq to js (rules-exclude branch) ([ba9a6f6](https://github.com/cloudgraphdev/cloudgraph-policy-packs/commit/ba9a6f607acbe85cdfc291fd2075681d96122fe5))

--- a/src/azure/cis-1.3.1/.releaserc.yml
+++ b/src/azure/cis-1.3.1/.releaserc.yml
@@ -19,21 +19,21 @@ plugins:
     - assets:
         - CHANGELOG.md
         - package.json
-  - - "@semrel-extra/npm"
+  - - "@semantic-release/npm"
     - npmPublish: true
   - "@semantic-release/github"
 verifyConditions:
   - "@semantic-release/changelog"
   - "@semantic-release/github"
-  - "@semrel-extra/npm"
+  - "@semantic-release/npm"
 prepare:
   - "@semantic-release/changelog"
-  - "@semrel-extra/npm"
+  - "@semantic-release/npm"
   - - "@semantic-release/git"
     - message: "chore(release): @cloudgraph/policy-pack-azure-cis-1.3.1 ${nextRelease.version} \n\n${nextRelease.notes}"
 publish:
   - "@semantic-release/github"
-  - "@semrel-extra/npm"
+  - "@semantic-release/npm"
 success: false
 fail: false
 tagFormat: "@cloudgraph/policy-pack-azure-cis-1.3.1@${version}"
