chore: update to pnpm

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,8 @@
-//registry.npmjs.org/:_authToken=${NPM_TOKEN}
+registry=https://registry.npmjs.org/
+@cloudgraph:registry=https://registry.npmjs.org/
 
+//registry.npmjs.org/:_authToken=${NPM_TOKEN}
+//registry.npmjs.org/:always-auth=false
+
+auto-install-peers=true
+ignore-scripts=true
