fix(Github Actions) install job on publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,9 @@ jobs:
         with:
           version: 7
           run_install: false
+        env:
+          NPM_TOKEN: ${{secrets.npm_token}}
+          GITHUB_TOKEN: ${{secrets.gh_token}}
 
       - name: Get pnpm store directory
         id: pnpm-cache
