--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
           token: ${{secrets.gh_token}}
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
           registry-url: "https://registry.npmjs.org"
 
       - uses: pnpm/action-setup@v2.0.1
@@ -50,6 +50,9 @@ jobs:
 
       - name: Lint
         run: pnpm lint
+        env:
+          NPM_TOKEN: ${{secrets.npm_token}}
+          GITHUB_TOKEN: ${{secrets.gh_token}}
 
       - name: Test
         run: pnpm test
