--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^8.0.1",
-    "@semantic-release/npm": "^9.0.1",
+    "semantic-release-pnpm": "^1.0.0",
     "semantic-release": "^19.0.2",
     "semantic-release-monorepo": "^7.0.5"
   },
